--- a/index.html
+++ b/index.html
@@ -1,9 +1,23 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
+    <meta name="description" content="아이존은 종합대행과 토탈케어서비스를 제공하는 전문 케어 회사입니다.">
+    <meta name="keywords" content="케어, care, 실버타운, 사회복지사, 보육, 요양, 장례, 실버라이프, 교육 및 운송 서비스">
+    <meta name="robots" content="index, follow">
+    <meta property="og:title" content="아이존 | aizon.com">
+    <meta property="og:description" content="케어, care, 실버타운, 사회복지사, 보육, 요양, 장례, 실버라이프, 교육 및 운송 서비스를 제공합니다.">
+    <meta property="og:image" content="https://aizon.com/og-image.jpg">
+    <meta property="og:url" content="https://aizon.com">
+    <meta name="twitter:card" content="summary_large_image">
+
+
+    <meta name="description" content="오루비투자 주식회사는 투자 전략과 자산 관리 서비스를 제공하는 전문 금융 회사입니다.">
+    <meta name="keywords" content="투자, 금융, 자산 관리, 오루비투자, Five Ruby Partners">
+    <meta name="robots" content="index, follow">
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>아이존 (Aizon Inc.) - 종합 케어 서비스(Total Care Service))</title>
+    <title>아이존 (aizon inc.) - 종합 케어 (Total Care Service)</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
@@ -98,7 +112,7 @@
             </nav>
             <div class="max-w-3xl">
                 <h1 class="text-5xl md:text-6xl font-bold text-white leading-tight mb-6">
-                    종합 케어 서비스(Total Care Service))의 <br>새로운 기준을 제시합니다
+                    종합 케어 서비스 의 <br> (Total Care Service)<br>새로운 기준을 제시합니다
                 </h1>
                 <p class="text-xl text-gray-300 mb-8">
                     아이존은 보육, 요양, 장례, 실버라이프, 교육 및 운송 서비스까지 <br>
@@ -319,7 +333,7 @@
                                 </div>
                                 <div>
                                     <h4 class="text-lg font-medium text-gray-800 mb-1">주소</h4>
-                                    <p class="text-gray-600">서울특별시 강남구 테헤란로 123 아이존빌딩 5층</p>
+                                    <p class="text-gray-600">서울특별시 강남구 테헤란로 440 아이존빌딩</p>
                                 </div>
                             </div>
                             <div class="flex items-start mb-4">
@@ -362,7 +376,7 @@
             <div class="flex flex-col md:flex-row justify-between items-center">
                 <div class="mb-6 md:mb-0">
                     <h3 class="text-2xl font-bold mb-2">아이존 <span class="text-indigo-400">Inc.</span></h3>
-                    <p class="text-gray-400">종합 케어 서비스(Total Care Service))의 새로운 기준</p>
+                    <p class="text-gray-400">종합 케어 서비스(Total Care Service)의 새로운 기준</p>
                 </div>
                 <div class="flex flex-col md:flex-row md:space-x-12">
                     <div class="mb-6 md:mb-0">
@@ -388,7 +402,7 @@
                 </div>
             </div>
             <div class="border-t border-gray-700 mt-8 pt-8 flex flex-col md:flex-row justify-between items-center">
-                <p class="text-gray-400">© 2025 아이존 Inc. All rights reserved.</p>
+                <p class="text-gray-400">© 2025 아이존 inc. All rights reserved.</p>
                 <div class="flex space-x-4 mt-4 md:mt-0">
                     <a href="#" class="text-gray-400 hover:text-white transition-colors">
                         <i class="fab fa-facebook text-xl"></i>
