--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <meta name="twitter:card" content="summary_large_image">
 
 
-    <meta name="description" content="오루비투자 주식회사는 투자 전략과 자산 관리 서비스를 제공하는 전문 금융 회사입니다.">
-    <meta name="keywords" content="투자, 금융, 자산 관리, 오루비투자, Five Ruby Partners">
+    <meta name="description" content="아이존은 종합대행과 토탈케어서비스를 제공하는 전문 케어 회사입니다.">
+    <meta name="keywords" content=""케어, care, 실버타운, 사회복지사, 보육, 요양, 장례, 실버라이프, 교육 및 운송 서비스">
     <meta name="robots" content="index, follow">
 
     <meta charset="UTF-8">
