--- a/index.html
+++ b/index.html
@@ -279,9 +279,9 @@
                     <div class="w-20 h-20 bg-indigo-100 rounded-full flex items-center justify-center mx-auto mb-6">
                         <i class="fas fa-heart text-3xl text-indigo-600"></i>
                     </div>
-                    <h3 class="text-xl font-bold text-gray-800 mb-3">고객 중심 서비스</h3>
+                    <h3 class="text-xl font-bold text-gray-800 mb-3">고객 비밀보장</h3>
                     <p class="text-gray-600">
-                        고객의 니즈와 요구사항을 최우선으로 고려하여 맞춤형 서비스를 제공합니다.
+                        고객의 니즈와 요구사항을 최우선으로 고려한 비밀보장 서비스를 제공합니다.
                     </p>
                 </div>
             </div>
@@ -422,7 +422,7 @@
     </footer>
 
     <!-- Kakao Talk Button -->
-    <a href="https://open.kakao.com/o/srUHq4kh" target="_blank" class="kakao-chat flex items-center justify-center bg-yellow-400 hover:bg-yellow-500 w-16 h-16 rounded-full shadow-lg transition-all">
+    <a href="https://open.kakao.com/o/s4hLupmh" target="_blank" class="kakao-chat flex items-center justify-center bg-yellow-400 hover:bg-yellow-500 w-16 h-16 rounded-full shadow-lg transition-all">
         <i class="fas fa-comment text-3xl text-gray-900"></i>
     </a>
 
