--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
                                 </div>
                                 <div>
                                     <h4 class="text-lg font-medium text-gray-800 mb-1">이메일</h4>
-                                    <p class="text-gray-600">info@aizon.com</p>
+                                    <p class="text-gray-600">abc@aizon.com</p>
                                 </div>
                             </div>
                             <div class="flex items-start">
