--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
     </footer>
 
     <!-- Kakao Talk Button -->
-    <a href="https://open.kakao.com/o/s4hLupmh" target="_blank" class="kakao-chat flex items-center justify-center bg-yellow-400 hover:bg-yellow-500 w-16 h-16 rounded-full shadow-lg transition-all">
+    <a href="https://open.kakao.com/o/seTJ4Lmh" target="_blank" class="kakao-chat flex items-center justify-center bg-yellow-400 hover:bg-yellow-500 w-16 h-16 rounded-full shadow-lg transition-all">
         <i class="fas fa-comment text-3xl text-gray-900"></i>
     </a>
 
