--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 
     <meta name="description" content="아이존은 종합대행과 토탈케어서비스를 제공하는 전문 케어 회사입니다.">
     <meta name="keywords" content=""케어, care, 실버타운, 사회복지사, 보육, 요양, 장례, 실버라이프, 교육 및 운송 서비스">
+
+    <meta name="naver-site-verification" content="a549256b06fb24bb83c70e4b22008b32cfd370d4" />
+
     <meta name="robots" content="index, follow">
 
     <meta charset="UTF-8">
@@ -422,7 +425,7 @@
     </footer>
 
     <!-- Kakao Talk Button -->
-    <a href="https://open.kakao.com/o/seTJ4Lmh" target="_blank" class="kakao-chat flex items-center justify-center bg-yellow-400 hover:bg-yellow-500 w-16 h-16 rounded-full shadow-lg transition-all">
+    <a href="https://open.kakao.com/o/s4hLupmh" target="_blank" class="kakao-chat flex items-center justify-center bg-yellow-400 hover:bg-yellow-500 w-16 h-16 rounded-full shadow-lg transition-all">
         <i class="fas fa-comment text-3xl text-gray-900"></i>
     </a>
 
@@ -466,5 +469,9 @@
             }
         });
     </script>
+
+  <footer>
+    <p>© 2025 아이존 aizon inc. All rights reserved.</p>
+  </footer>
 </body>
 </html>
