--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
     <meta name="description" content="아이존은 종합대행과 토탈케어서비스를 제공하는 전문 케어 회사입니다.">
-    <meta name="keywords" content="케어, care, 실버타운, 사회복지사, 보육, 요양, 장례, 실버라이프, 교육 및 운송 서비스">
+    <meta name="keywords" content="케어, care, 실버타운, 사회복지사, 보육, 요양, 장례, 실버라이프, 교육 및 운송 서비스, 표윤엽">
     <meta name="robots" content="index, follow">
     <meta property="og:title" content="아이존 | aizon.com">
     <meta property="og:description" content="케어, care, 실버타운, 사회복지사, 보육, 요양, 장례, 실버라이프, 교육 및 운송 서비스를 제공합니다.">
@@ -12,7 +12,7 @@
 
 
     <meta name="description" content="아이존은 종합대행과 토탈케어서비스를 제공하는 전문 케어 회사입니다.">
-    <meta name="keywords" content=""케어, care, 실버타운, 사회복지사, 보육, 요양, 장례, 실버라이프, 교육 및 운송 서비스">
+    <meta name="keywords" content=""케어, care, 실버타운, 사회복지사, 보육, 요양, 장례, 실버라이프, 교육 및 운송 서비스, 표윤엽">
 
     <meta name="naver-site-verification" content="a549256b06fb24bb83c70e4b22008b32cfd370d4" />
 
